New component for the dashboard - map.
Map, based on leaflet, displays an icon in the middle of the map.
Also it shows polyline, which represents route of a marker.

--- a/src/index.html
+++ b/src/index.html
@@ -36,6 +36,7 @@
     <link rel="stylesheet" href="vendor/font-awesome/css/font-awesome.css">
     <link rel="stylesheet" href="vendor/weather-icons-lite/css/weather-icons-lite.css">
     <link rel="stylesheet" href="vendor/angularjs-color-picker/dist/angularjs-color-picker.min.css">
+    <link rel="stylesheet" href="vendor/leaflet/dist/leaflet.css">
 
     <link rel="stylesheet" href="components/ui-component/templates/button.css">
     <link rel="stylesheet" href="components/ui-component/templates/chart.css">
@@ -50,6 +51,7 @@
     <link rel="stylesheet" href="components/ui-component/templates/text.css">
     <link rel="stylesheet" href="components/ui-component/templates/template.css">
     <link rel="stylesheet" href="components/ui-component/templates/form.css">
+    <link rel="stylesheet" href="components/ui-component/templates/map.css">
     <link rel="stylesheet" href="components/ui-card-panel/ui-card-panel.css">
 
     <link rel="stylesheet/less" href="main.less">
@@ -105,11 +107,15 @@
 <script src="vendor/tinycolor2/dist/tinycolor-min.js"></script>
 <script src="vendor/angularjs-color-picker/dist/angularjs-color-picker.min.js"></script>
 
+<!--maps-->
+<script src="vendor/leaflet/dist/leaflet.js"></script>
+
 <script src="main.js"></script>
 <script src="services/events.js"></script>
 <script src="services/sizes.js"></script>
 <script src="directives/ui-template.js"></script>
 <script src="directives/ui-highlight.js"></script>
+<script src="directives/ui-map.js"></script>
 <script src="directives/ui-colour-picker.js"></script>
 <script src="components/ui-component/ui-component.js"></script>
 <script src="components/ui-component/ui-component-ctrl.js"></script>
